--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>Fort en pommes ?!</title>
-	<link rel="icon" href="favicon.ico" />
+	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script>
 		var clique = 0
